--- a/accounts/templates/accounts/account.html
+++ b/accounts/templates/accounts/account.html
@@ -1,6 +1,8 @@
 {% extends 'core/base.html' %}
 {% load static %}
+
 {% load get_custom %}
+{% load static_image %}
 
 {% load thumbnail %}
 
@@ -30,14 +32,15 @@
             <!-- profile pic-->
             <div class="w-full lg:w-3/12 px-4 lg:order-2 flex justify-center">
               <div class="relative">
-                {% if account.profile_picture %}
+                {% firstof "/media/profile_pictures/default.jpg" as default_pic %}
+                {% if account.profile_picture.url != default_pic %}
                   {% thumbnail account.profile_picture "150x150" crop="center" as im %}
                     <img alt="..." src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}"
                     class="shadow-xl rounded-full h-auto align-middle border-none absolute -m-16 -ml-20 lg:-ml-16 max-w-fit"
                     >
                   {% endthumbnail %}
                 {% else %}
-                  {% thumbnail "../../../media/profile_pictures/default.jpg" "150x150" crop="center" as im %}
+                  {% thumbnail "default_avatar.jpg"|static_image "150x150" crop="center" as im %}
                     <img alt="..." src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}"
                     class="shadow-xl rounded-full h-auto align-middle border-none absolute -m-16 -ml-20 lg:-ml-16 max-w-fit"
                     >
@@ -49,75 +52,16 @@
             {% if user != account %}
             <div class="w-full lg:w-4/12 px-4 lg:order-3 lg:text-right lg:self-center">
               <!-- CONNECTION BUTTONS -->
-              <div class="max-[640px]:text-center py-6 px-3 mt-32 sm:mt-0">
-                {% if relation_exists %}
-                  <button class="btn btn-disabled">
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5">
-                      <path stroke-linecap="round" stroke-linejoin="round" d="M13.19 8.688a4.5 4.5 0 011.242 7.244l-4.5 4.5a4.5 4.5 0 01-6.364-6.364l1.757-1.757m13.35-.622l1.757-1.757a4.5 4.5 0 00-6.364-6.364l-4.5 4.5a4.5 4.5 0 001.242 7.244" />
-                    </svg>
-                    Connected
-                  </button>
-                {% else %}
-                  {% if request_to_exists %}
-                  <!-- UNDO (REQUEST SENT) -->
-                  <form method="POST">
-                    {% csrf_token %}
-                    <div class="tooltip tooltip-top tooltip-error" data-tip="click to cancel request">
-                      <button type="submit" name="undo_request_form" class="btn btn-success opacity-50 border-2 border-emerald-700"><span class="loading loading-spinner"></span>Request Sent</button>
-                    </div>
-                  </form>
-                  {% elif request_from_exists %}
-                  <!-- ACCEPT CONNECTION REQUEST-->
-                  <form method="POST">
-                    {% csrf_token %}
-                    <div class="mt-32 lg:mt-0 grid grid-cols-1 space-y-2">
-                      <input type="submit" name="accept_form" class="btn btn-outline btn-info" value="Accept connection request">
-
-                      <!-- SELECT RELATION TYPE -->
-                      <label class="label">
-                        <p class="label-text">Who is <span class="font-bold">{% firstof account.first_name account.email %}</span> to you ?</p>
-                      </label>
-                      <select class="select select-bordered" name="relation_type" id="id_relation_type">
-                        {% for option in accept_form.relation_type %}
-                        {{option}}
-                        {% endfor %}
-                      </select>
-                    </div>
-                  </form>
-                  {% else %}
-                  <form method="POST"> <!-- REQUEST FRIENDSHIP -->
-                    {% csrf_token %}
-                    <button type="submit" name="request_form" class="btn btn-outline">
-                      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 sm:w-6 h-5 sm:h-6">
-                        <path stroke-linecap="round" stroke-linejoin="round" d="M13.19 8.688a4.5 4.5 0 011.242 7.244l-4.5 4.5a4.5 4.5 0 01-6.364-6.364l1.757-1.757m13.35-.622l1.757-1.757a4.5 4.5 0 00-6.364-6.364l-4.5 4.5a4.5 4.5 0 001.242 7.244" />
-                      </svg>
-                      Connect
-                    </button>
-                  </form>
-                  {% endif %}
-                {% endif %}
-              </div>
+              {% include 'partials/account_connection_buttons.html' %}
             </div>
             <!-- dashboard -->
-            <div class="w-full lg:w-4/12 px-4 lg:order-1">
-              <div class="flex justify-center py-4 lg:pt-4 pt-8">
-                <div class="mr-4 p-3 text-center">
-                  <span class="text-xl font-bold block uppercase tracking-wide ">{{number_of_relations}}</span><span class="text-sm text-gray-400">Connections</span>
-                </div>
-                <div class="mr-4 p-3 text-center">
-                  <span class="text-xl font-bold block uppercase tracking-wide ">{{number_of_photos}}</span><span class="text-sm text-gray-400">Photos</span>
-                </div>
-                <div class="lg:mr-4 p-3 text-center">
-                  <span class="text-xl font-bold block uppercase tracking-wide ">{{number_of_comments}}</span><span class="text-sm text-gray-400">Comments</span>
-                </div>
-              </div>
-            </div>
-          </div>
+            {% include 'partials/account_dashboard.html' %}
+          </div> <!-- END CASE 1 -->
           <!-- CASE 2 : USER'S OWN PROFILE PAGE-->
           {% else %}
           <div class="w-full lg:w-4/12 px-4 lg:order-3 lg:text-right lg:self-center">
             <!-- SETTINGS -->
-            <div class="max-[640px]:text-center py-6 px-3 mt-32 sm:mt-0">
+            <div class="max-sm:text-center py-6 px-3 mt-32 sm:mt-0">
               <a href="{% url 'accounts:edit_account' user.pk %}" class="btn btn-outline" type="button">
                 <svg class="w-5 h-5 stroke-current"  xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6V4m0 2a2 2 0 100 4m0-4a2 2 0 110 4m-6 8a2 2 0 100-4m0 4a2 2 0 110-4m0 4v2m0-6V4m6 6v10m6-2a2 2 0 100-4m0 4a2 2 0 110-4m0 4v2m0-6V4"></path></svg>
                 settings
@@ -125,58 +69,12 @@
             </div>
           </div>
           <!-- dashboard -->
-          <div class="w-full lg:w-4/12 px-4 lg:order-1">
-            <div class="flex justify-center py-4 lg:pt-4 pt-8">
-              <div class="mr-4 p-3 text-center">
-                <span class="text-xl font-bold block uppercase tracking-wide ">{{number_of_relations}}</span><span class="text-sm text-gray-400">Connections</span>
-              </div>
-              <div class="mr-4 p-3 text-center">
-                <span class="text-xl font-bold block uppercase tracking-wide ">{{number_of_photos}}</span><span class="text-sm text-gray-400">Photos</span>
-              </div>
-              <div class="lg:mr-4 p-3 text-center">
-                <span class="text-xl font-bold block uppercase tracking-wide ">{{number_of_comments}}</span><span class="text-sm text-gray-400">Comments</span>
-              </div>
-            </div>
-          </div>
+            {% include 'partials/account_dashboard.html' %}
         </div>
-        {% endif %}
+        {% endif %} <!-- END CASE 2 -->
 
           <!-- USER INFOS -->
-          <div class="text-center mt-12">
-            <h3 class="text-4xl font-semibold leading-normal mb-2 text-blueGray-700">
-              {{account.first_name}} {{account.last_name}}
-            </h3>
-            {% if account.country %}
-            <div class="inline-flex text-sm leading-normal mt-0 mb-2 font-bold uppercase">
-              <span class="mr-2">
-                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
-                  <path stroke-linecap="round" stroke-linejoin="round" d="M6.115 5.19l.319 1.913A6 6 0 008.11 10.36L9.75 12l-.387.775c-.217.433-.132.956.21 1.298l1.348 1.348c.21.21.329.497.329.795v1.089c0 .426.24.815.622 1.006l.153.076c.433.217.956.132 1.298-.21l.723-.723a8.7 8.7 0 002.288-4.042 1.087 1.087 0 00-.358-1.099l-1.33-1.108c-.251-.21-.582-.299-.905-.245l-1.17.195a1.125 1.125 0 01-.98-.314l-.295-.295a1.125 1.125 0 010-1.591l.13-.132a1.125 1.125 0 011.3-.21l.603.302a.809.809 0 001.086-1.086L14.25 7.5l1.256-.837a4.5 4.5 0 001.528-1.732l.146-.292M6.115 5.19A9 9 0 1017.18 4.64M6.115 5.19A8.965 8.965 0 0112 3c1.929 0 3.716.607 5.18 1.64" />
-                </svg>
-              </span>
-              {{account.country}}
-            </div>
-            {% endif %}
-            {% if account.date_of_birth %}
-            <div class="inline-flex mb-2 text-blueGray-600 mt-10">
-              <span class="mr-2">
-                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
-                  <path stroke-linecap="round" stroke-linejoin="round" d="M12 8.25v-1.5m0 1.5c-1.355 0-2.697.056-4.024.166C6.845 8.51 6 9.473 6 10.608v2.513m6-4.87c1.355 0 2.697.055 4.024.165C17.155 8.51 18 9.473 18 10.608v2.513m-3-4.87v-1.5m-6 1.5v-1.5m12 9.75l-1.5.75a3.354 3.354 0 01-3 0 3.354 3.354 0 00-3 0 3.354 3.354 0 01-3 0 3.354 3.354 0 00-3 0 3.354 3.354 0 01-3 0L3 16.5m15-3.38a48.474 48.474 0 00-6-.37c-2.032 0-4.034.125-6 .37m12 0c.39.049.777.102 1.163.16 1.07.16 1.837 1.094 1.837 2.175v5.17c0 .62-.504 1.124-1.125 1.124H4.125A1.125 1.125 0 013 20.625v-5.17c0-1.08.768-2.014 1.837-2.174A47.78 47.78 0 016 13.12M12.265 3.11a.375.375 0 11-.53 0L12 2.845l.265.265zm-3 0a.375.375 0 11-.53 0L9 2.845l.265.265zm6 0a.375.375 0 11-.53 0L15 2.845l.265.265z" />
-                </svg>
-              </span>
-              {{account.date_of_birth}}
-            </div>
-            {% endif %}
-            <div class="mt-2 block mb-2">
-              <div class="inline-flex">
-                <span class="mr-2 text-lg">
-                  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
-                    <path stroke-linecap="round" stroke-linejoin="round" d="M21.75 6.75v10.5a2.25 2.25 0 01-2.25 2.25h-15a2.25 2.25 0 01-2.25-2.25V6.75m19.5 0A2.25 2.25 0 0019.5 4.5h-15a2.25 2.25 0 00-2.25 2.25m19.5 0v.243a2.25 2.25 0 01-1.07 1.916l-7.5 4.615a2.25 2.25 0 01-2.36 0L3.32 8.91a2.25 2.25 0 01-1.07-1.916V6.75" />
-                  </svg>
-                </span>
-                {{account.email}}
-              </div>
-            </div>
-          </div>
+          {% include 'partials/account_infos.html' %}
 
           <div class="mt-10 py-8 border-t border-gray-200 text-center">
             {% if user == account %}
@@ -198,10 +96,15 @@
                             <div class="flex items-center space-x-3">
                               <div class="avatar">
                                 <div class="mask mask-squircle w-10 h-10">
-                                  <!-- <img src="{% if user != relation.user_sending %}{{relation.user_sending.profile_picture.url}}{% elif user != relation.user_receiving %}{{relation.user_receiving.profile_picture.url}} {% endif %}" alt="Avatar Tailwind CSS Component" /> -->
-                                  {% thumbnail relation_user.profile_picture "50x50" crop="center" as im %}
-                                    <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" alt="{% firstof relation_user.first_name relation_user.email %}'s profile pic" class="h-full w-full object-cover object-center group-hover:opacity-75">
-                                  {% endthumbnail %}
+                                  {% if relation_user.profile_picture.url != default_pic %}
+                                    {% thumbnail relation_user.profile_picture "50x50" crop="center" as im %}
+                                      <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" alt="{% firstof relation_user.first_name relation_user.email %}'s profile pic" class="h-full w-full object-cover object-center group-hover:opacity-75">
+                                    {% endthumbnail %}
+                                  {% else %}
+                                    {% thumbnail "default_avatar.jpg"|static_image "50x50" crop="center" as im %}
+                                        <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" alt="{% firstof relation_user.first_name relation_user.email %}'s profile pic" class="h-full w-full object-cover object-center group-hover:opacity-75">
+                                    {% endthumbnail %}
+                                  {% endif %}
                                 </div>
                               </div>
                               <div>
@@ -317,19 +220,6 @@
 
       <p> {{friends_with_account}} </p>
     </div>
-          <!-- USER PERSONAL INFO -->
-          <!-- {% for name, value in account.get_fields %}
-            {% if value %}
-              <div class="prose prose-sm md:prose-base w-full max-w-4xl pt-10">
-                <h3>{{ name|capfirst }}</h3>
-                <h2>{{ value }}</h2>
-              </div>
-            {% endif %}
-          {% endfor %} -->
-
-
-
-
 
 
   </section>
