--- a/accounts/templates/accounts/account.html
+++ b/accounts/templates/accounts/account.html
@@ -76,101 +76,27 @@
           <!-- USER INFOS -->
           {% include 'partials/account_infos.html' %}
 
-          <div class="mt-10 py-8 border-t border-gray-200 text-center">
+          <div class="grid grid-cols-1 md:grid-cols-2 lg:px-4 max-w-7xl mx-auto gap-x-4 mt-10 py-8 border-t border-gray-200 text-center">
             {% if user == account %}
-              <!-- SHOW LIST OF RELATIONS -->
-              <div class="my-10 p-4 bg-base-200 w-full max-w-4xl rounded-xl">
-                <div class="py-2 flex gap-4 items-center">
-                  <h1 class="text-2xl font-semibold">Connected accounts</h1>
-                  <svg class="w-5 h-5 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 52 52" enable-background="new 0 0 52 52" xml:space="preserve" transform="rotate(-45)"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <g> <path d="M17.3,36.1l-1.1-1.4c0,0-0.7-1-0.9-1.6c-0.2-0.3-0.5-0.5-0.9-0.5h-0.6c-3.5,0-6.5-2.6-6.7-6 c-0.3-3.8,2.8-6.9,6.5-6.9h9.1c1.2,0,2.3,0.4,3.2,0.8c1.2,0.7,2.2,1.8,2.7,3.1c0.3,0.8,0.5,1.6,0.5,2.6c0,0.5-0.1,0.9-0.2,1.4 c-0.2,0.7,0.3,1.3,1,1.2l3.4,0c0.5,0,0.8-0.4,1-0.8c0.1-0.6,0.1-1.2,0.1-1.8c0-0.8-0.1-1.7-0.3-2.6c-0.3-1.4-0.9-2.7-1.7-3.9 c-1.5-2.2-3.8-4-6.4-4.7c-1-0.3-2.2-0.5-3.2-0.5H14c-6.3,0-11.7,4.9-11.9,11.2c-0.3,6.6,5,12.1,11.6,12.1h3 C17.4,37.7,17.8,36.7,17.3,36.1z M49.9,25.6c-0.2-6.3-5.6-11.3-11.9-11.2l-2.7-0.1c-0.8,0-1.3,1-0.8,1.6c0.8,0.9,1.4,1.9,2,3 c0.2,0.3,0.5,0.5,0.9,0.5H38c3.5,0,6.5,2.6,6.7,6c0.3,3.8-2.8,6.9-6.5,6.9l-9.1,0c-1.2,0-2.3-0.4-3.2-0.8c-1.2-0.7-2.2-1.8-2.7-3.1 c-0.3-0.8-0.5-1.6-0.5-2.6c0-0.5,0.1-0.9,0.2-1.4c0.2-0.7-0.3-1.3-1-1.2h-3.4c-0.5,0-0.8,0.4-1,0.8c-0.1,0.6-0.1,1.2-0.1,1.8 c0,0.8,0.1,1.8,0.3,2.6c0.3,1.4,0.9,2.7,1.7,3.8c1.5,2.2,3.8,4,6.4,4.7c1,0.3,2.2,0.5,3.2,0.5l9.1,0C44.8,37.7,50.1,32.2,49.9,25.6 z"></path> </g> </g></svg>
+              {% if account.hide_connections %}
+                <div class="flex gap-4 place-content-center md:col-span-2">
+                  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2.5" stroke="currentColor" class="w-6 h-6 animate-pulse">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M3.98 8.223A10.477 10.477 0 001.934 12C3.226 16.338 7.244 19.5 12 19.5c.993 0 1.953-.138 2.863-.395M6.228 6.228A10.45 10.45 0 0112 4.5c4.756 0 8.773 3.162 10.065 7.498a10.523 10.523 0 01-4.293 5.774M6.228 6.228L3 3m3.228 3.228l3.65 3.65m7.894 7.894L21 21m-3.228-3.228l-3.65-3.65m0 0a3 3 0 10-4.243-4.243m4.242 4.242L9.88 9.88" />
+                  </svg>
+                  <div>
+                    your connections are <span class="font-bold">hidden</span> from other users
+                  </div>
                 </div>
-
-                {% if relations %}
-                <div class="overflow-x-auto">
-                  <table class="table">
-                    {% for relation_user, relation in users_relations_dict.items %}
-                    <tbody>
-                      <tr class="hover">
-                        <th class="p-2">
-                          <a href="{% url 'accounts:account_view' relation_user.id %}" class="cursor-pointer">
-                            <div class="flex items-center space-x-3">
-                              <div class="avatar">
-                                <div class="mask mask-squircle w-10 h-10">
-                                  {% if relation_user.profile_picture.url != default_pic %}
-                                    {% thumbnail relation_user.profile_picture "50x50" crop="center" as im %}
-                                      <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" alt="{% firstof relation_user.first_name relation_user.email %}'s profile pic" class="h-full w-full object-cover object-center group-hover:opacity-75">
-                                    {% endthumbnail %}
-                                  {% else %}
-                                    {% thumbnail "default_avatar.jpg"|static_image "50x50" crop="center" as im %}
-                                        <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" alt="{% firstof relation_user.first_name relation_user.email %}'s profile pic" class="h-full w-full object-cover object-center group-hover:opacity-75">
-                                    {% endthumbnail %}
-                                  {% endif %}
-                                </div>
-                              </div>
-                              <div>
-                                <div class="font-bold">
-                                  {% firstof relation_user.first_name relation_user.last_name "-" %}
-                                </div>
-                                <div class="text-sm opacity-50">
-                                  {{relation_user.email|truncatechars:12}}
-                                </div>
-                              </div>
-                            </div>
-                          </a>
-                        </th>
-                        <th><p class="badge badge-sm sm:badge-md ">{{relation.relation_type}}</p></th>
-                      </tr>
-                    </tbody>
-                    {% endfor %}
-                  </table>
-                </div>
-                {% endif %}
-              </div>
-
-              <!-- SEARCH BAR FOR OTHER USERS-->
-              <div class="my-10">
-                <h2 class="text-xl font-semibold">Look for family members or friends:</h2>
-                <form method="GET" class="flex flex-wrap gap-2">
-                  <input type="text" class="input input-bordered w-full" name="search-area" placeholder="Type to find users" value={{search_input}}>
-                  <input type="submit" class="btn btn-default w-full" value="Search"></input>
-                </form>
-              </div>
-              <!-- SEARCH RESULTS -->
-              {% if search_input %}
-              <div class="overflow-x-auto">
-                <table class="table">
-                  <thead>
-                    <tr>
-                      <th>User</th>
-                    </tr>
-                  </thead>
-                  {% for searched_user in searched_users %}
-                    {% if searched_user not in relations_users %}
-                    <tbody>
-                      <tr class="hover">
-                        <th>
-                          <a href="{% url 'accounts:account_view' searched_user.id %}" class="cursor-pointer">
-                            <div class="flex items-center space-x-3">
-                              <div class="avatar">
-                                <div class="mask mask-squircle w-12 h-12">
-                                  <img src="{% if searched_user.profile_picture %}{{searched_user.profile_picture.url}}{% else %} {% endif %}" alt="Avatar Tailwind CSS Component" />
-                                </div>
-                              </div>
-                              <div>
-                                <div class="font-bold">{% firstof searched_user.first_name searched_user.last_name "-" %}</div>
-                                <div class="text-sm opacity-50">{{searched_user.email}}</div>
-                              </div>
-                            </div>
-                          </a>
-                        </th>
-                      </tr>
-                    </tbody>
-                    {% endif %}
-                  {% endfor %}
-                </table>
-              </div>
               {% endif %}
+              <!-- SHOW LIST OF RELATIONS -->
+              {% include 'partials/account_connections_list.html' %}
+              <!-- SEARCH BAR FOR OTHER USERS-->
+              {% include 'partials/account_connections_searchbar.html' %}
 
+            {% else %}
+              {% if not account.hide_connections %}
+                {% include 'partials/account_connections_list.html' %}
+              {% endif %}
             {% endif %}
           </div>
 
@@ -184,7 +110,7 @@
                 <details class="collapse collapse-arrow grid h-auto py-4 card bg-base-300 rounded-box place-items-center">
 
                   <summary class="collapse-title text-center">
-                    {% if account.first_name %}{{account.first_name}}{% else %}{{account.email}}{% endif %} and you are connected as <span class="ml-1 badge">{{users_relations_dict|get_relation:account}}</span>
+                    {% if account.first_name %}{{account.first_name}}{% else %}{{account.email}}{% endif %} and you are connected as <span class="ml-1 badge">{{ users_relations_dict|get_relation:user }}</span>
                   </summary>
                   <div class="collapse-content flex place-content-center gap-2">
                       <p>something wrong ? :</p>
