--- a/accounts/templates/accounts/custom_widget.html
+++ b/accounts/templates/accounts/custom_widget.html
@@ -9,6 +9,15 @@
   </div>
   <div class="divider">OR</div>
   <div class="grid h-20 card bg-base-300 rounded-box place-items-center">
-    <input type="checkbox" name="profile_picture-clear" id="profile_picture-clear_id" aria-label="Clear profile picture" class="btn">
+    <label id="clear_label_btn" for="profile_picture-clear_id" class="btn">
+      <svg class="w-5 h-5 fill-current stroke-current" viewBox="0 -0.14 20.436 20.436" xmlns="http://www.w3.org/2000/svg"><g id="delete-user-circle" transform="translate(-1.979 -2)">
+        <path id="secondary" fill="none" d="M7,19.5a9,9,0,0,0,9.94,0A5,5,0,0,0,7,19.5Z"></path>
+        <path id="primary" d="M21,10.5l-3-3m3,0-3,3M12,15a5,5,0,0,0-5,4.5,9,9,0,0,0,9.94,0A5,5,0,0,0,12,15Z" fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"></path>
+        <path id="primary-2" data-name="primary" d="M14,7.53A4.09,4.09,0,0,0,12,7a4,4,0,1,0,3,6.64" fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"></path>
+        <path id="primary-3" data-name="primary" d="M20.48,15a8.86,8.86,0,0,1-2.12,3.36A9,9,0,1,1,12,3a8.8,8.8,0,0,1,3,.52" fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"></path> </g>
+      </svg>
+      <span id="clear_text">Clear</span>
+    </label>
+    <input type="checkbox" name="profile_picture-clear" id="profile_picture-clear_id" aria-label="Checkbox" class="hidden" onclick="blurProfilePic()">
   </div>
 </div>
