--- a/static/css/output.css
+++ b/static/css/output.css
@@ -2296,21 +2296,6 @@ html {
   align-items: center;
 }
 
-.radio {
-  flex-shrink: 0;
-  --chkbg: var(--bc);
-  height: 1.5rem;
-  width: 1.5rem;
-  cursor: pointer;
-  -webkit-appearance: none;
-     -moz-appearance: none;
-          appearance: none;
-  border-radius: 9999px;
-  border-width: 1px;
-  border-color: hsl(var(--bc) / var(--tw-border-opacity));
-  --tw-border-opacity: 0.2;
-}
-
 .select {
   display: inline-flex;
   cursor: pointer;
@@ -2343,64 +2328,6 @@ html {
 
 .select[multiple] {
   height: auto;
-}
-
-.stats {
-  display: inline-grid;
-  --tw-bg-opacity: 1;
-  background-color: hsl(var(--b1) / var(--tw-bg-opacity));
-  --tw-text-opacity: 1;
-  color: hsl(var(--bc) / var(--tw-text-opacity));
-  border-radius: var(--rounded-box, 1rem);
-}
-
-:where(.stats) {
-  grid-auto-flow: column;
-  overflow-x: auto;
-}
-
-.stat {
-  display: inline-grid;
-  width: 100%;
-  grid-template-columns: repeat(1, 1fr);
-  -moz-column-gap: 1rem;
-       column-gap: 1rem;
-  border-color: hsl(var(--bc) / var(--tw-border-opacity));
-  --tw-border-opacity: 0.1;
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-}
-
-.stat-figure {
-  grid-column-start: 2;
-  grid-row: span 3 / span 3;
-  grid-row-start: 1;
-  place-self: center;
-  justify-self: end;
-}
-
-.stat-title {
-  grid-column-start: 1;
-  white-space: nowrap;
-  color: hsl(var(--bc) / 0.6);
-}
-
-.stat-value {
-  grid-column-start: 1;
-  white-space: nowrap;
-  font-size: 2.25rem;
-  line-height: 2.5rem;
-  font-weight: 800;
-}
-
-.stat-desc {
-  grid-column-start: 1;
-  white-space: nowrap;
-  font-size: 0.75rem;
-  line-height: 1rem;
-  color: hsl(var(--bc) / 0.6);
 }
 
 .table {
@@ -3465,26 +3392,6 @@ details.collapse summary::-webkit-details-marker {
   }
 }
 
-.radio:focus-visible {
-  outline-style: solid;
-  outline-width: 2px;
-  outline-offset: 2px;
-  outline-color: hsl(var(--bc) / 1);
-}
-
-.radio:checked,
-  .radio[aria-checked="true"] {
-  --tw-bg-opacity: 1;
-  background-color: hsl(var(--bc) / var(--tw-bg-opacity));
-  animation: radiomark var(--animation-input, 0.2s) ease-out;
-  box-shadow: 0 0 0 4px hsl(var(--b1)) inset, 0 0 0 4px hsl(var(--b1)) inset;
-}
-
-.radio:disabled {
-  cursor: not-allowed;
-  opacity: 0.2;
-}
-
 @keyframes radiomark {
   0% {
     box-shadow: 0 0 0 12px hsl(var(--b1)) inset, 0 0 0 12px hsl(var(--b1)) inset;
@@ -3556,15 +3463,6 @@ details.collapse summary::-webkit-details-marker {
 
 [dir="rtl"] .select {
   background-position: calc(0% + 12px) calc(1px + 50%), calc(0% + 16px) calc(1px + 50%);
-}
-
-:where(.stats) > :not([hidden]) ~ :not([hidden]) {
-  --tw-divide-x-reverse: 0;
-  border-right-width: calc(1px * var(--tw-divide-x-reverse));
-  border-left-width: calc(1px * calc(1 - var(--tw-divide-x-reverse)));
-  --tw-divide-y-reverse: 0;
-  border-top-width: calc(0px * calc(1 - var(--tw-divide-y-reverse)));
-  border-bottom-width: calc(0px * var(--tw-divide-y-reverse));
 }
 
 .table :where(th, td) {
@@ -3702,6 +3600,21 @@ details.collapse summary::-webkit-details-marker {
   color: hsl(var(--suc) / var(--tw-text-opacity));
 }
 
+.toggle-warning:focus-visible {
+  outline-color: hsl(var(--wa) / 1);
+}
+
+.toggle-warning:checked,
+    .toggle-warning[checked="true"],
+    .toggle-warning[aria-checked="true"] {
+  border-color: hsl(var(--wa) / var(--tw-border-opacity));
+  --tw-border-opacity: 0.1;
+  --tw-bg-opacity: 1;
+  background-color: hsl(var(--wa) / var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: hsl(var(--wac) / var(--tw-text-opacity));
+}
+
 .toggle-error:focus-visible {
   outline-color: hsl(var(--er) / 1);
 }
@@ -3834,10 +3747,6 @@ details.collapse summary::-webkit-details-marker {
   padding-right: 0.75rem;
   min-height: 2rem;
   font-size: 0.875rem;
-}
-
-.btn-wide {
-  width: 16rem;
 }
 
 .btn-block {
@@ -4517,10 +4426,6 @@ details.collapse summary::-webkit-details-marker {
   margin-top: 2rem;
 }
 
-.mt-24 {
-  margin-top: 6rem;
-}
-
 .block {
   display: block;
 }
@@ -4565,10 +4470,6 @@ details.collapse summary::-webkit-details-marker {
   height: 5rem;
 }
 
-.h-24 {
-  height: 6rem;
-}
-
 .h-32 {
   height: 8rem;
 }
@@ -4583,10 +4484,6 @@ details.collapse summary::-webkit-details-marker {
 
 .h-40 {
   height: 10rem;
-}
-
-.h-48 {
-  height: 12rem;
 }
 
 .h-5 {
@@ -4625,10 +4522,6 @@ details.collapse summary::-webkit-details-marker {
   height: 1px;
 }
 
-.h-44 {
-  height: 11rem;
-}
-
 .min-h-screen {
   min-height: 100vh;
 }
@@ -4645,20 +4538,12 @@ details.collapse summary::-webkit-details-marker {
   width: 4rem;
 }
 
-.w-24 {
-  width: 6rem;
-}
-
 .w-36 {
   width: 9rem;
 }
 
 .w-4 {
   width: 1rem;
-}
-
-.w-48 {
-  width: 12rem;
 }
 
 .w-5 {
@@ -4679,14 +4564,6 @@ details.collapse summary::-webkit-details-marker {
 
 .w-full {
   width: 100%;
-}
-
-.w-1\/4 {
-  width: 25%;
-}
-
-.w-3\/4 {
-  width: 75%;
 }
 
 .min-w-0 {
@@ -4726,6 +4603,14 @@ details.collapse summary::-webkit-details-marker {
   max-width: 20rem;
 }
 
+.max-w-6xl {
+  max-width: 72rem;
+}
+
+.max-w-7xl {
+  max-width: 80rem;
+}
+
 .flex-1 {
   flex: 1 1 0%;
 }
@@ -4762,8 +4647,25 @@ details.collapse summary::-webkit-details-marker {
   animation: bounce 1s infinite;
 }
 
-.cursor-default {
-  cursor: default;
+@keyframes pulse {
+  50% {
+    opacity: .5;
+  }
+}
+
+.animate-pulse {
+  animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+}
+
+@keyframes ping {
+  75%, 100% {
+    transform: scale(2);
+    opacity: 0;
+  }
+}
+
+.animate-ping {
+  animation: ping 1s cubic-bezier(0, 0, 0.2, 1) infinite;
 }
 
 .cursor-pointer {
@@ -4780,10 +4682,6 @@ details.collapse summary::-webkit-details-marker {
 
 .grid-cols-6 {
   grid-template-columns: repeat(6, minmax(0, 1fr));
-}
-
-.grid-cols-2 {
-  grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
 .grid-rows-2 {
@@ -4808,6 +4706,10 @@ details.collapse summary::-webkit-details-marker {
 
 .place-items-center {
   place-items: center;
+}
+
+.items-start {
+  align-items: flex-start;
 }
 
 .items-end {
@@ -4842,6 +4744,10 @@ details.collapse summary::-webkit-details-marker {
   gap: 1.5rem;
 }
 
+.gap-3 {
+  gap: 0.75rem;
+}
+
 .gap-x-16 {
   -moz-column-gap: 4rem;
        column-gap: 4rem;
@@ -4858,6 +4764,11 @@ details.collapse summary::-webkit-details-marker {
 
 .gap-y-8 {
   row-gap: 2rem;
+}
+
+.gap-x-4 {
+  -moz-column-gap: 1rem;
+       column-gap: 1rem;
 }
 
 .-space-x-6 > :not([hidden]) ~ :not([hidden]) {
@@ -4944,11 +4855,6 @@ details.collapse summary::-webkit-details-marker {
   border-style: none;
 }
 
-.border-base-300 {
-  --tw-border-opacity: 1;
-  border-color: hsl(var(--b3) / var(--tw-border-opacity));
-}
-
 .border-base-content {
   --tw-border-opacity: 1;
   border-color: hsl(var(--bc) / var(--tw-border-opacity));
@@ -5001,11 +4907,6 @@ details.collapse summary::-webkit-details-marker {
 .bg-black {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
-}
-
-.bg-gray-100 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 }
 
 .bg-gray-200 {
@@ -5248,6 +5149,10 @@ details.collapse summary::-webkit-details-marker {
   padding-top: 2rem;
 }
 
+.pt-4 {
+  padding-top: 1rem;
+}
+
 .text-left {
   text-align: left;
 }
@@ -5367,11 +5272,6 @@ details.collapse summary::-webkit-details-marker {
   letter-spacing: 0.025em;
 }
 
-.text-accent {
-  --tw-text-opacity: 1;
-  color: hsl(var(--a) / var(--tw-text-opacity));
-}
-
 .text-base-200 {
   --tw-text-opacity: 1;
   color: hsl(var(--b2) / var(--tw-text-opacity));
@@ -5405,11 +5305,6 @@ details.collapse summary::-webkit-details-marker {
 .text-neutral-content {
   --tw-text-opacity: 1;
   color: hsl(var(--nc) / var(--tw-text-opacity));
-}
-
-.text-primary {
-  --tw-text-opacity: 1;
-  color: hsl(var(--p) / var(--tw-text-opacity));
 }
 
 .text-red-700 {
@@ -5492,28 +5387,9 @@ details.collapse summary::-webkit-details-marker {
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
 
-.ring-4 {
-  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
-  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(4px + var(--tw-ring-offset-width)) var(--tw-ring-color);
-  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
-}
-
-.ring-gray-100 {
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(243 244 246 / var(--tw-ring-opacity));
-}
-
 .ring-white {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(255 255 255 / var(--tw-ring-opacity));
-}
-
-.ring-offset-2 {
-  --tw-ring-offset-width: 2px;
-}
-
-.ring-offset-base-100 {
-  --tw-ring-offset-color: hsl(var(--b1) / 1);
 }
 
 .filter {
@@ -5531,38 +5407,6 @@ details.collapse summary::-webkit-details-marker {
 @media not all and (min-width: 640px) {
   .max-sm\:btn-block {
     width: 100%;
-  }
-}
-
-@media (max-width: 555px) {
-  .max-\[555px\]\:stats-vertical {
-    grid-auto-flow: row;
-  }
-
-  .max-\[555px\]\:stats-vertical > :not([hidden]) ~ :not([hidden]) {
-    --tw-divide-y-reverse: 0;
-    border-top-width: calc(1px * calc(1 - var(--tw-divide-y-reverse)));
-    border-bottom-width: calc(1px * var(--tw-divide-y-reverse));
-    --tw-divide-x-reverse: 0;
-    border-right-width: calc(0px * var(--tw-divide-x-reverse));
-    border-left-width: calc(0px * calc(1 - var(--tw-divide-x-reverse)));
-  }
-
-  .max-\[555px\]\:stats-vertical {
-    grid-auto-flow: row;
-  }
-
-  .max-\[555px\]\:stats-vertical > :not([hidden]) ~ :not([hidden]) {
-    --tw-divide-y-reverse: 0;
-    border-top-width: calc(1px * calc(1 - var(--tw-divide-y-reverse)));
-    border-bottom-width: calc(1px * var(--tw-divide-y-reverse));
-    --tw-divide-x-reverse: 0;
-    border-right-width: calc(0px * var(--tw-divide-x-reverse));
-    border-left-width: calc(0px * calc(1 - var(--tw-divide-x-reverse)));
-  }
-
-  .max-\[555px\]\:stats-vertical {
-    overflow-y: auto;
   }
 }
 
@@ -6090,10 +5934,6 @@ details.collapse summary::-webkit-details-marker {
     width: 0.125rem;
   }
 
-  .lg\:stats-vertical {
-    grid-auto-flow: row;
-  }
-
   .lg\:divider-horizontal {
     margin-top: 0px;
     margin-bottom: 0px;
@@ -6101,19 +5941,6 @@ details.collapse summary::-webkit-details-marker {
     margin-right: 1rem;
     height: auto;
     width: 1rem;
-  }
-
-  .lg\:stats-vertical > :not([hidden]) ~ :not([hidden]) {
-    --tw-divide-y-reverse: 0;
-    border-top-width: calc(1px * calc(1 - var(--tw-divide-y-reverse)));
-    border-bottom-width: calc(1px * var(--tw-divide-y-reverse));
-    --tw-divide-x-reverse: 0;
-    border-right-width: calc(0px * var(--tw-divide-x-reverse));
-    border-left-width: calc(0px * calc(1 - var(--tw-divide-x-reverse)));
-  }
-
-  .lg\:stats-vertical {
-    overflow-y: auto;
   }
 }
 
@@ -6141,11 +5968,6 @@ details.collapse summary::-webkit-details-marker {
 
 .hover\:rounded-full:hover {
   border-radius: 9999px;
-}
-
-.hover\:border-accent:hover {
-  --tw-border-opacity: 1;
-  border-color: hsl(var(--a) / var(--tw-border-opacity));
 }
 
 .hover\:bg-gray-100\/75:hover {
@@ -6212,21 +6034,6 @@ details.collapse summary::-webkit-details-marker {
   opacity: 0.8;
 }
 
-.peer:checked ~ .peer-checked\:border-accent {
-  --tw-border-opacity: 1;
-  border-color: hsl(var(--a) / var(--tw-border-opacity));
-}
-
-.peer:checked ~ .peer-checked\:bg-accent {
-  --tw-bg-opacity: 1;
-  background-color: hsl(var(--a) / var(--tw-bg-opacity));
-}
-
-.peer:checked ~ .peer-checked\:text-white {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
 @media (prefers-color-scheme: dark) {
   .dark\:border-gray-700 {
     --tw-border-opacity: 1;
@@ -6284,10 +6091,6 @@ details.collapse summary::-webkit-details-marker {
 }
 
 @media not all and (min-width: 1024px) {
-  .max-lg\:mt-32 {
-    margin-top: 8rem;
-  }
-
   .max-lg\:mt-0 {
     margin-top: 0px;
   }
@@ -6303,12 +6106,6 @@ details.collapse summary::-webkit-details-marker {
   }
 }
 
-@media (max-width: 640px) {
-  .max-\[640px\]\:text-center {
-    text-align: center;
-  }
-}
-
 @media (max-width: 469px) {
   .max-\[469px\]\:w-\[351px\] {
     width: 351px;
@@ -6316,6 +6113,10 @@ details.collapse summary::-webkit-details-marker {
 }
 
 @media (min-width: 640px) {
+  .sm\:col-span-1 {
+    grid-column: span 1 / span 1;
+  }
+
   .sm\:col-span-3 {
     grid-column: span 3 / span 3;
   }
@@ -6352,6 +6153,10 @@ details.collapse summary::-webkit-details-marker {
     height: 8rem;
   }
 
+  .sm\:h-48 {
+    height: 12rem;
+  }
+
   .sm\:h-6 {
     height: 1.5rem;
   }
@@ -6362,10 +6167,6 @@ details.collapse summary::-webkit-details-marker {
 
   .sm\:h-96 {
     height: 24rem;
-  }
-
-  .sm\:h-48 {
-    height: 12rem;
   }
 
   .sm\:w-10 {
@@ -6403,10 +6204,6 @@ details.collapse summary::-webkit-details-marker {
 
   .sm\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
-  }
-
-  .sm\:grid-cols-3 {
-    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
   .sm\:items-center {
@@ -6486,6 +6283,14 @@ details.collapse summary::-webkit-details-marker {
 }
 
 @media (min-width: 768px) {
+  .md\:col-span-2 {
+    grid-column: span 2 / span 2;
+  }
+
+  .md\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
   .md\:text-4xl {
     font-size: 2.25rem;
     line-height: 2.5rem;
@@ -6617,6 +6422,11 @@ details.collapse summary::-webkit-details-marker {
     padding: 3rem;
   }
 
+  .lg\:px-12 {
+    padding-left: 3rem;
+    padding-right: 3rem;
+  }
+
   .lg\:px-16 {
     padding-left: 4rem;
     padding-right: 4rem;
@@ -6635,6 +6445,28 @@ details.collapse summary::-webkit-details-marker {
   .lg\:py-24 {
     padding-top: 6rem;
     padding-bottom: 6rem;
+  }
+
+  .lg\:py-6 {
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
+  }
+
+  .lg\:px-4 {
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+
+  .lg\:pb-8 {
+    padding-bottom: 2rem;
+  }
+
+  .lg\:pt-12 {
+    padding-top: 3rem;
+  }
+
+  .lg\:pt-28 {
+    padding-top: 7rem;
   }
 
   .lg\:pt-4 {
