--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -1,7 +1,5 @@
 {% load static %}
-{% load thumbnail %}
-{% load is_notif %}
-{% load mathfilters %}
+
 
 <!DOCTYPE html >
 <html lang="en" >
@@ -19,161 +17,7 @@
 
 <body class="bg-base-100 h-full">
   <header>
-    <div class="navbar bg-base-100 shadow-md">
-      <div class="flex-1">
-        <a href="/" class=" normal-case ml-2 px-3 pb-2 hover:bg-gray-50/25 rounded-lg font-normal text-5xl">æ<span class="ml-px text-2xl tracking-wide hidden sm:inline-block align-middle">ternam</span></a>
-      </div>
-      {% if request.user.is_authenticated %}
-      <div class="flex-none">
-        {# notifications #}
-        <div class="dropdown dropdown-end">
-          <label tabindex="0" class="btn btn-ghost btn-circle">
-            <div class="indicator">
-              <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9" /></svg>
-              {% if categorized_notifications|is_notif %}
-                <span class="badge badge-xs badge-primary indicator-item"></span>
-              {% endif %}
-            </div>
-          </label>
-          <div tabindex="0" class="mt-3 z-[1] card card-compact dropdown-content w-52 bg-base-100 shadow-xl">
-            <div class="card-body">
-              {% if all_notifications %}
-                <p class="font-bold text-lg"><span class="badge badge-primary indicator-item">{{notifs_count}}</span> notification{{notifs_count|pluralize}}:</p>
-                {% with limit=3 %}
-                  {% for notification in all_notifications|slice:limit %}
-                    {% if notification.content_type.model == 'albumaccess' %}
-                      <a href="{% url 'albums:album_detail' notification.content_object.album.pk %}">
-                        <div class="bg-neutral-content/50 rounded-xl p-2 border border-primary">
-                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="float-left mr-1 w-5 h-5">
-                              <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 15.75l5.159-5.159a2.25 2.25 0 013.182 0l5.159 5.159m-1.5-1.5l1.409-1.409a2.25 2.25 0 013.182 0l2.909 2.909m-18 3.75h16.5a1.5 1.5 0 001.5-1.5V6a1.5 1.5 0 00-1.5-1.5H3.75A1.5 1.5 0 002.25 6v12a1.5 1.5 0 001.5 1.5zm10.5-11.25h.008v.008h-.008V8.25zm.375 0a.375.375 0 11-.75 0 .375.375 0 01.75 0z" />
-                            </svg>
-                            <p>{{notification.message|truncatechars:40}}</p>
-                        </div>
-                      </a>
-                    {% elif notification.content_type.model == 'relationrequest' %}
-                      <a href="{% url 'accounts:account_view' notification.content_object.user_sending.pk %}">
-                        <div class="bg-neutral-content/50 rounded-xl p-2 border border-primary">
-                          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="float-left mr-1 w-5 h-5">
-                            <path stroke-linecap="round" stroke-linejoin="round" d="M19 7.5v3m0 0v3m0-3h3m-3 0h-3m-2.25-4.125a3.375 3.375 0 11-6.75 0 3.375 3.375 0 016.75 0zM4 19.235v-.11a6.375 6.375 0 0112.75 0v.109A12.318 12.318 0 0110.374 21c-2.331 0-4.512-.645-6.374-1.766z" />
-                          </svg>
-                          <p>{{notification.message|truncatechars:40}}</p>
-                        </div>
-                    {% elif notification.content_type.model == 'comment' %}
-                      <a href="{% url 'photos:photo_detail' notification.content_object.commented_photo.pk %}">
-                        <div class="bg-neutral-content/50 rounded-xl p-2 border border-primary">
-                          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="float-left mr-1 w-5 h-5">
-                            <path stroke-linecap="round" stroke-linejoin="round" d="M8.625 9.75a.375.375 0 11-.75 0 .375.375 0 01.75 0zm0 0H8.25m4.125 0a.375.375 0 11-.75 0 .375.375 0 01.75 0zm0 0H12m4.125 0a.375.375 0 11-.75 0 .375.375 0 01.75 0zm0 0h-.375m-13.5 3.01c0 1.6 1.123 2.994 2.707 3.227 1.087.16 2.185.283 3.293.369V21l4.184-4.183a1.14 1.14 0 01.778-.332 48.294 48.294 0 005.83-.498c1.585-.233 2.708-1.626 2.708-3.228V6.741c0-1.602-1.123-2.995-2.707-3.228A48.394 48.394 0 0012 3c-2.392 0-4.744.175-7.043.513C3.373 3.746 2.25 5.14 2.25 6.741v6.018z" />
-                          </svg>
-                          <p>{{notification.message|truncatechars:40}}</p>
-                        </div>
-                    {% endif %}
-                  {% endfor %}
-
-                  <a class="mt-1 btn btn-sm" href="{% url 'accounts:notifications_view' %}">
-                    {% if notifs_count|sub:limit > 0 %}+ {{ notifs_count|sub:limit }} more{% else %}notification panel{% endif %}
-                  </a>
-                {% endwith %}
-              {% else %}
-                <span class="font-bold text-lg">No notifications</span>
-                <a class="mt-1 btn btn-xs" href="{% url 'accounts:notifications_view' %}">
-                  notification panel
-                </a>
-              {% endif %}
-            </div>
-          </div>
-        </div>
-        {# Menu #}
-        <div class="dropdown dropdown-end px-2 py-1">
-          <div tabindex="0" class="inline-flex sm:hover:bg-base-content/20 rounded-lg px-2 py-1">
-            <div class=" btn btn-ghost btn-circle avatar">
-              <div class="w-10 rounded-full">
-                {% if user.profile_picture %}
-                  {% thumbnail user.profile_picture "50x50" crop="center" as im %}
-                    <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" alt="{{ im.user }} profile pic" class="h-full w-full object-cover object-center group-hover:opacity-75">
-                  {% endthumbnail %}
-                {% else %}
-                  <img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_1280.png" />
-                {% endif %}
-              </div>
-            </div>
-            <button  class="hidden sm:menu sm:menu-horizontal">
-              <ul class="">
-                <p class=" text-left text-xs block">
-                  <strong class="block font-medium">{{user.first_name}} {{user.last_name}}</strong>
-                  <span class="text-gray-500">{{user.email}}</span>
-                </p>
-              </ul>
-              <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  class="ms-4 hidden h-5 w-5 text-gray-500 transition group-hover:text-gray-700 sm:block"
-                  viewBox="0 0 20 20"
-                  fill="currentColor"
-                >
-                  <path
-                    fill-rule="evenodd"
-                    d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
-                    clip-rule="evenodd"
-                  />
-                </svg>
-            </button>
-          </div>
-          <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow-xl bg-base-100 rounded-box w-52">
-            <li>
-              <a href="{% url 'albums:albums_view' %}">
-                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5">
-                  <path stroke-linecap="round" stroke-linejoin="round" d="M16.5 8.25V6a2.25 2.25 0 00-2.25-2.25H6A2.25 2.25 0 003.75 6v8.25A2.25 2.25 0 006 16.5h2.25m8.25-8.25H18a2.25 2.25 0 012.25 2.25V18A2.25 2.25 0 0118 20.25h-7.5A2.25 2.25 0 018.25 18v-1.5m8.25-8.25h-6a2.25 2.25 0 00-2.25 2.25v6" />
-                </svg>
-              My Albums
-              </a>
-            </li>
-            <li>
-              <a href="{% url 'accounts:account_view' user.pk %}">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="w-5 h-5"><path d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"></path><circle cx="12" cy="7" r="4"></circle></svg>
-                My Profile
-                <!-- <span class="badge">New</span> -->
-              </a>
-            </li>
-
-            <li><a href="{% url 'accounts:logout' %}" class="text-red-700 font-semibold">
-              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5">
-                <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 9V5.25A2.25 2.25 0 0013.5 3h-6a2.25 2.25 0 00-2.25 2.25v13.5A2.25 2.25 0 007.5 21h6a2.25 2.25 0 002.25-2.25V15M12 9l-3 3m0 0l3 3m-3-3h12.75" />
-              </svg>
-              Logout
-            </a></li>
-            <div class="h-px my-1 mx-2 bg-base-content opacity-25"></div>
-            <li>
-              <details>
-                <summary>
-                  <svg class="stroke-2 stroke-current w-5 h-5" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" transform="rotate(45)"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M9 3V7M15 3V6M4 10H20M12 21C10.2337 21 8.91561 19.3737 9.28133 17.6457L9.34332 17.3528C9.56076 16.3254 9.04388 15.2832 8.09439 14.8346L5.9897 13.8401C4.77487 13.2661 4 12.043 4 10.6994V4.63149C4 3.73044 4.73044 3 5.63149 3H18.3685C19.2696 3 20 3.73044 20 4.63149V10.6994C20 12.043 19.2251 13.2661 18.0103 13.8401L15.9056 14.8346C14.9561 15.2832 14.4392 16.3254 14.6567 17.3528L14.7187 17.6457C15.0844 19.3737 13.7663 21 12 21Z" stroke-linecap="round" stroke-linejoin="round"></path> </g></svg>
-                  Theme
-                </summary>
-                <ul class="p-2">
-                  <li>
-                    <button class="p-1 rounded hover:bg-gray-300 " data-set-theme="light" data-act-class="ACTIVECLASS">
-                      {# sun icon #}
-                      <svg class="fill-current w-4 h-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M5.64,17l-.71.71a1,1,0,0,0,0,1.41,1,1,0,0,0,1.41,0l.71-.71A1,1,0,0,0,5.64,17ZM5,12a1,1,0,0,0-1-1H3a1,1,0,0,0,0,2H4A1,1,0,0,0,5,12Zm7-7a1,1,0,0,0,1-1V3a1,1,0,0,0-2,0V4A1,1,0,0,0,12,5ZM5.64,7.05a1,1,0,0,0,.7.29,1,1,0,0,0,.71-.29,1,1,0,0,0,0-1.41l-.71-.71A1,1,0,0,0,4.93,6.34Zm12,.29a1,1,0,0,0,.7-.29l.71-.71a1,1,0,1,0-1.41-1.41L17,5.64a1,1,0,0,0,0,1.41A1,1,0,0,0,17.66,7.34ZM21,11H20a1,1,0,0,0,0,2h1a1,1,0,0,0,0-2Zm-9,8a1,1,0,0,0-1,1v1a1,1,0,0,0,2,0V20A1,1,0,0,0,12,19ZM18.36,17A1,1,0,0,0,17,18.36l.71.71a1,1,0,0,0,1.41,0,1,1,0,0,0,0-1.41ZM12,6.5A5.5,5.5,0,1,0,17.5,12,5.51,5.51,0,0,0,12,6.5Zm0,9A3.5,3.5,0,1,1,15.5,12,3.5,3.5,0,0,1,12,15.5Z"/></svg>
-                      <p class="text-xs">Light</p>
-                    </button>
-                    <button class="p-1 rounded hover:bg-gray-300 " data-set-theme="dark" data-act-class="ACTIVECLASS">
-                      {# moon icon #}
-                      <svg class="fill-current w-4 h-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M21.64,13a1,1,0,0,0-1.05-.14,8.05,8.05,0,0,1-3.37.73A8.15,8.15,0,0,1,9.08,5.49a8.59,8.59,0,0,1,.25-2A1,1,0,0,0,8,2.36,10.14,10.14,0,1,0,22,14.05,1,1,0,0,0,21.64,13Zm-9.5,6.69A8.14,8.14,0,0,1,7.08,5.22v.27A10.15,10.15,0,0,0,17.22,15.63a9.79,9.79,0,0,0,2.1-.22A8.11,8.11,0,0,1,12.14,19.73Z"/></svg>
-                      <p class="text-xs">Dark</p>
-                    </button>
-                    <button class="p-1 rounded hover:bg-gray-300 " data-set-theme="" data-act-class="ACTIVECLASS">
-                      {# System theme #}
-                      <svg class="fill-transparent stroke-2 stroke-current w-4 h-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M15 20H9M4 13.8002V8.2002C4 7.08009 4 6.51962 4.21799 6.0918C4.40973 5.71547 4.71547 5.40973 5.0918 5.21799C5.51962 5 6.08009 5 7.2002 5H16.8002C17.9203 5 18.4796 5 18.9074 5.21799C19.2837 5.40973 19.5905 5.71547 19.7822 6.0918C20 6.5192 20 7.07899 20 8.19691V13.8031C20 14.921 20 15.48 19.7822 15.9074C19.5905 16.2837 19.2837 16.5905 18.9074 16.7822C18.48 17 17.921 17 16.8031 17H7.19691C6.07899 17 5.5192 17 5.0918 16.7822C4.71547 16.5905 4.40973 16.2837 4.21799 15.9074C4 15.4796 4 14.9203 4 13.8002Z"  ></path></svg>
-                      <p class="text-xs">System</p>
-                    </button>
-                  </li>
-                </ul>
-              </details>
-            </li>
-          </ul>
-        </div>
-
-      </div>
-      {% endif %}
-    </div>
+    {% include 'partials/navbar.html' %}
   </header>
 
   <main>
