edited welcome page

--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -9,8 +9,17 @@
   <div class="hero-content text-center text-neutral-content">
     <div class="max-w-md">
       <h1 class="mb-5 text-5xl font-bold">Precious moments</h1>
-      <p class="mb-5">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
-      <a href="{% url 'accounts:register' %}" class="btn btn-accent">Get Started</a>
+      <p class="mb-5">
+        A site dedicated to sharing old family photos. Dust off those old albums and bring them back to life! <br>
+        This is a first version of the site: it's experimental and under development.Please bear with the author for any bugs 😇
+      </p>
+      <hr>
+      <br>
+      <p class="mb-5">
+        Un site dédié au partage de photos de famille laissées au placard. Dépoussierez tous ces vieux albums et redonnez-leur vie ! <br>
+        C'est une première version du site: elle est expérimentale et en cours de développement. Soyez indulgent envers son auteur pour d'éventuels bugs  😇
+      </p>
+      <a href="{% url 'accounts:login' %}" class="btn btn-accent">Get Started</a>
     </div>
   </div>
 </div>
