added photo descr + photo swipe

--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -47,6 +47,7 @@
 </body>
 
   <!-- Theme change script (https://github.com/saadeghi/theme-change) -->
+  {% block javascript %}{% endblock %}
   <script src="https://cdn.jsdelivr.net/npm/theme-change@2.0.2/index.js"></script>
   <!-- Alpine js scripts -->
   <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
