--- a/photos/templates/photos/photo_detail.html
+++ b/photos/templates/photos/photo_detail.html
@@ -105,6 +105,7 @@
   {% load static %}
   {% block javascript %}
     <script src="{% static 'photos/js/photo_swipe.js' %}"></script>
+    <script src="{% static 'photos/js/comment_delete.js' %}"></script>
   {% endblock %}
 
 </div>
