fixed notif count pb in context processor

--- a/accounts/templates/accounts/account_update.html
+++ b/accounts/templates/accounts/account_update.html
@@ -101,4 +101,8 @@
   </div>
 </section>
 
+{% block javascript %}
+  <script src="{% static 'accounts/js/clear_profile_pic.js' %}"></script>
+{% endblock %}
+
 {% endblock %}
