--- a/core/templates/partials/navbar.html
+++ b/core/templates/partials/navbar.html
@@ -13,7 +13,8 @@
       <label tabindex="0" class="btn btn-ghost btn-circle">
         <div class="indicator">
           <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9" /></svg>
-          {% if categorized_notifications|is_notif %}
+          {# {% if categorized_notifications|is_notif %} #}
+          {% if all_notifications %}
             <span class="badge badge-xs badge-primary indicator-item"></span>
           {% endif %}
         </div>
@@ -21,7 +22,7 @@
       <div tabindex="0" class="mt-3 z-[1] card card-compact dropdown-content w-52 bg-base-100 shadow-xl">
         <div class="card-body">
           {% if all_notifications %}
-            <p class="font-bold text-lg"><span class="badge badge-primary indicator-item">{{notifs_count}}</span> notification{{notifs_count|pluralize}}:</p>
+            <p class="font-bold text-lg"><span class="badge badge-primary indicator-item">{{all_notifications.count}}</span> notification{{notifs_count|pluralize}}:</p>
             {% with limit=3 %}
               {% for notification in all_notifications|slice:limit %}
                 {% if notification.content_type.model == 'albumaccess' %}
